fix: removed horizontal scroll from page 404

--- a/src/app/(home)/[not-found]/notFound.module.scss
+++ b/src/app/(home)/[not-found]/notFound.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 100vw;
+	width: 100%;
 	height: calc(100vh - 148px);
 	background-color: var(--color-silver-gray);
 
